--- a/ATMusic/Controllers/MusicPlayerVC/DetailPlayerVC/DetailPlayerViewController.xib
+++ b/ATMusic/Controllers/MusicPlayerVC/DetailPlayerVC/DetailPlayerViewController.xib
@@ -50,9 +50,25 @@
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Timer" translatesAutoresizingMaskIntoConstraints="NO" id="Szu-QM-76l">
+                                    <rect key="frame" x="333" y="12" width="27" height="27"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="Szu-QM-76l" secondAttribute="height" multiplier="1:1" id="uDN-uT-zpf"/>
+                                    </constraints>
+                                </imageView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P5G-bi-LDo">
-                                    <rect key="frame" x="330" y="10" width="30" height="30"/>
-                                    <state key="normal" image="Timer"/>
+                                    <rect key="frame" x="305" y="0.0" width="70" height="50"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="P5G-bi-LDo" secondAttribute="height" multiplier="7:5" id="9UJ-Pp-Pga"/>
+                                        <constraint firstAttribute="width" secondItem="P5G-bi-LDo" secondAttribute="height" multiplier="1:1" id="N6Y-aF-xOe"/>
+                                        <constraint firstAttribute="width" secondItem="P5G-bi-LDo" secondAttribute="height" multiplier="1:1" id="Vji-2B-3BR"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="N6Y-aF-xOe"/>
+                                            <exclude reference="Vji-2B-3BR"/>
+                                        </mask>
+                                    </variation>
                                     <connections>
                                         <action selector="didTapTimerButton:" destination="-1" eventType="touchUpInside" id="Uaf-jk-jAN"/>
                                     </connections>
@@ -62,16 +78,26 @@
                             <constraints>
                                 <constraint firstItem="19F-J8-i1I" firstAttribute="height" secondItem="eln-SN-uiK" secondAttribute="height" id="0f3-5u-QML"/>
                                 <constraint firstAttribute="bottom" secondItem="19F-J8-i1I" secondAttribute="bottom" id="1UM-86-BYj"/>
+                                <constraint firstItem="P5G-bi-LDo" firstAttribute="height" secondItem="nBJ-84-y6H" secondAttribute="height" id="3AJ-eb-gTF"/>
                                 <constraint firstItem="eln-SN-uiK" firstAttribute="width" secondItem="nBJ-84-y6H" secondAttribute="width" multiplier="1/2" id="5Q2-GU-RDo"/>
+                                <constraint firstItem="P5G-bi-LDo" firstAttribute="width" secondItem="nBJ-84-y6H" secondAttribute="width" multiplier="25/375" id="8iD-Rq-1vF"/>
                                 <constraint firstItem="19F-J8-i1I" firstAttribute="centerX" secondItem="nBJ-84-y6H" secondAttribute="centerX" id="ASG-s9-Owz"/>
                                 <constraint firstItem="eln-SN-uiK" firstAttribute="centerX" secondItem="nBJ-84-y6H" secondAttribute="centerX" id="KEm-vt-I4e"/>
                                 <constraint firstAttribute="height" constant="50" id="N3e-oh-Erk"/>
+                                <constraint firstItem="Szu-QM-76l" firstAttribute="width" secondItem="nBJ-84-y6H" secondAttribute="width" multiplier="27/375" id="ND3-RY-xvl"/>
+                                <constraint firstAttribute="trailing" secondItem="Szu-QM-76l" secondAttribute="trailing" constant="15" id="Nkh-n7-7l1"/>
+                                <constraint firstItem="Szu-QM-76l" firstAttribute="centerY" secondItem="nBJ-84-y6H" secondAttribute="centerY" id="cN8-SG-bDd"/>
                                 <constraint firstItem="19F-J8-i1I" firstAttribute="width" secondItem="eln-SN-uiK" secondAttribute="width" id="ekN-6d-mS8"/>
                                 <constraint firstItem="eln-SN-uiK" firstAttribute="top" secondItem="nBJ-84-y6H" secondAttribute="top" id="lvh-IJ-h48"/>
-                                <constraint firstAttribute="trailing" secondItem="P5G-bi-LDo" secondAttribute="trailing" constant="15" id="rjN-Lp-59w"/>
+                                <constraint firstAttribute="trailing" secondItem="P5G-bi-LDo" secondAttribute="trailing" id="rjN-Lp-59w"/>
                                 <constraint firstItem="P5G-bi-LDo" firstAttribute="centerY" secondItem="nBJ-84-y6H" secondAttribute="centerY" id="tRn-le-La7"/>
                                 <constraint firstItem="eln-SN-uiK" firstAttribute="height" secondItem="nBJ-84-y6H" secondAttribute="height" multiplier="1/2" id="wQM-aS-76s"/>
                             </constraints>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="8iD-Rq-1vF"/>
+                                </mask>
+                            </variation>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wOe-5F-cOb" userLabel="Show Image View">
                             <rect key="frame" x="0.0" y="70" width="375" height="412"/>
