--- a/ATMusic/Controllers/MusicPlayerVC/DetailPlayerVC/DetailPlayerViewController.xib
+++ b/ATMusic/Controllers/MusicPlayerVC/DetailPlayerVC/DetailPlayerViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -370,7 +370,7 @@
                 <constraint firstAttribute="trailing" secondItem="C82-10-TpO" secondAttribute="trailing" id="zwH-RY-9Ey"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="586.5" y="377.5"/>
+            <point key="canvasLocation" x="294.5" y="387.5"/>
         </view>
     </objects>
     <resources>
